sports-database/k8s-config-files/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2022-09-08T08:08:50Z"
  generation: 1
  labels:
    app: user-database
  name: user-database
  namespace: default
  resourceVersion: "575"
  uid: fe5dd069-9393-4459-afd6-fdb63d9ad2c8
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: user-database
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: user-database
    spec:
      containers:
      - image: jpsoutost/user-database:latest
        imagePullPolicy: Always
        name: user-database
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
