sports-database/k8s-config-files/athlete-data-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: athlete-database
  labels:
    app: athlete-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: athlete-database
  template:
    metadata:
      labels:
        app: athlete-database
    spec:
      containers:
        - name: athlete-database
          image: js/athlete-database
          imagePullPolicy: Never
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: athlete-database-service
spec:
  selector:
    app: athlete-database
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
      nodePort: 30001
