sports-database/k8s-config-files/sports-data-web-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sports-database
  labels:
    app: sports-database
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: sports-database
  template:
    metadata:
      labels:
        app: sports-database
    spec:
      containers:
        - name: sports-database
          image: jpsoutost/sports-database:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: sports-database-service
spec:
  selector:
    app: sports-database
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
