sports-database/k8s-config-files/user-web-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-database
  labels:
    app: user-database
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: user-database
  template:
    metadata:
      labels:
        app: user-database
    spec:
      containers:
        - name: user-database
          image: jpsoutost/user-database
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: user-database-service
spec:
  selector:
    app: user-database
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30002
